--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
 
   <script>window.global = window;</script>
+
+  <!-- Added Google Fonts link -->
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
